--- a/src/plugins/vue-directus/assets/css/lib/quill.core.css
+++ b/src/plugins/vue-directus/assets/css/lib/quill.core.css
@@ -34,7 +34,7 @@
   line-height: inherit;
   height: 100%;
   outline: none;
-  overflow-y: auto;
+  /* overflow-y: auto; */
   padding: 0;
   tab-size: 4;
   -moz-tab-size: 4;
